--- a/modal.css
+++ b/modal.css
@@ -1,3 +1,13 @@
+#divine-other {
+  position: relative;
+  width: 100%; 
+}
+
+#Overall {
+  width: 100%;
+  height: 100px; 
+}
+
 #divine-backdrop {
   position: fixed;
   top: 0;
