--- a/modal.css
+++ b/modal.css
@@ -1,11 +1,11 @@
-#divine-other {
+.divine-chart {
+  margin: 0 auto;
+  width: 100%;
   position: relative;
-  width: 100%; 
 }
 
-#Overall {
-  width: 100%;
-  height: 100px; 
+body {
+  background-color: transparent;
 }
 
 #divine-backdrop {
